hotfix to AB test sticky ATC

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -94,10 +94,10 @@
                     {%- when 'text' -%}
                       
                     {%- when 'title' -%}
-                        <div id="atc-section" class="custom-pro-title-section">
+                        <div class="custom-pro-title-section">
                         <h1>{{ product.title | escape }}</h1>
                         <div class="include-wat">{{product.metafields.product_fields.sub_title}}</div>
-                        <div class="review-box yotpo bottomLine" data-product-id="{{ product.id }}"></div>
+                        <div id="atc-section" class="review-box yotpo bottomLine" data-product-id="{{ product.id }}"></div>
                         {% include 'frontrow-quant-widget' %}
                         {% if product.handle == 'panorama-fertility-lab-test' %}
                           <p class="panorama-disclaimer">*Mira Panorama Lab Test is not available in the state of New York (NY)</p>
