--- a/snippets/sticky-atc.liquid
+++ b/snippets/sticky-atc.liquid
@@ -120,6 +120,15 @@
   </style>
 {% endif %}
 
+{% if product.handle == 'fertility-plus-starter-kit' %}
+  <style>
+  #atc-section {
+      margin-top: -0px;
+      padding-top: 0px;
+    }
+  </style>
+{% endif %}
+
 <div class="sticky-abc">
   <div class="sticky-atc" id="sticky-atc-custom">
     <div class="sticky-atc__image">
