hotfix sticky atc test

--- a/snippets/sticky-atc.liquid
+++ b/snippets/sticky-atc.liquid
@@ -129,6 +129,15 @@
   </style>
 {% endif %}
 
+{% if product.handle == 'fertility-max-starter-kit' %}
+  <style>
+   #atc-section {
+      margin-top: -70px;
+      padding-top: 70px;
+    }
+  </style>
+{% endif %}
+
 <div class="sticky-abc">
   <div class="sticky-atc" id="sticky-atc-custom">
     <div class="sticky-atc__image">
