--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -464,7 +464,9 @@
     class="gradient template-{{ template | split: '.' | first }} {{ template }}{% if template == "product" %} {{ product.handle }}{% endif %} {% for tag in product.tags %} {{ tag }}{% endfor %}"
     data-sticky-original
   >
-  {% render 'sticky-atc' %}
+  {% if page.handle == 'products' 
+    {% render 'sticky-atc' %}
+  {% endif %}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
