hotfix views in pdps

--- a/snippets/sticky-atc.liquid
+++ b/snippets/sticky-atc.liquid
@@ -111,7 +111,7 @@
   </style>
 {% endif %}
 
-{% if product.handle == 'coaching' or product.handle == 'academy' or product.handle == 'fertility-meditations' or product.handle == 'home-sperm-test' or product.handle == 'biogenesis-fertility-lubricant' or product.handle == 'basal-body-thermometer'%}
+{% if product.handle == 'exseed-home-sperm-test' or product.handle == 'coaching' or product.handle == 'academy' or product.handle == 'fertility-meditations' or product.handle == 'home-sperm-test' or product.handle == 'biogenesis-fertility-lubricant' or product.handle == 'basal-body-thermometer'%}
   <style>
   #atc-section {
       margin-top: -370px;
