--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -166,10 +166,16 @@
                       </p>
                     
                     {%- when 'variant_picker' -%}
-                    <div class="custom_pro_variant">
-                      {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
-                    </div>
-                   <div data-rebuy-id="130816" data-rebuy-shopify-product-ids="{{ product.id }}" style="overflow: hidden;"></div>
+                      <div class="custom_pro_variant">
+                        {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
+                      </div>
+                      {% comment %}
+                         NOTE: custom implementation for variant picker
+                      {% endcomment %}
+                      {% if product.url contains '/products/fertility-max-starter-kit' %}
+                        {% render 'pdm-variant-picker', product: product %}
+                      {% endif %}
+                      <div data-rebuy-id="130816" data-rebuy-shopify-product-ids="{{ product.id }}" style="overflow: hidden;"></div>
                     {%- when 'price' -%}
                      <div class="custom_pro_yotpo">
                        {% render 'yotpo-subs-product-page-widget' %}
