add changes to data-attributes

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -463,6 +463,7 @@
   <body
     class="gradient template-{{ template | split: '.' | first }} {{ template }}{% if template == "product" %} {{ product.handle }}{% endif %} {% for tag in product.tags %} {{ tag }}{% endfor %}"
     data-sticky-original
+		data-view-details="false"
   >
   {% render 'sticky-atc' %}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
