Website Updates - From Eileen

--- a/sections/game-changer.liquid
+++ b/sections/game-changer.liquid
@@ -2,10 +2,9 @@
   <div class="container">
     <div class="heading-1 text-center">
       <h2>Mira Fertility Plus is a Game Changer!</h2>
-      <p>The Estrogen hormone is a key component in understanding your cycle. With Mira Fertility Plus, you are able to see your 
-        Estrogen and LH levels, know your cycle phases, hormone patterns, and all fertile days and infertile days.
+      <p>
+        Home-use hormone tests are intended to track ovulation and menstruation cycles. These tests should not be used for medical diagnosis or to adjust medication without supervision. Consult a licensed provider before making changes to your healthcare regimen.
       </p>
-      <p class="disclaimer">Disclaimer: <em>The device is only for predicting fertility and ovulation.</em></p>
     </div>
     <div class="row">
       <div class="col-lg-7 order-lg-2">
