--- a/sections/section-max-kit-faq.liquid
+++ b/sections/section-max-kit-faq.liquid
@@ -37,7 +37,7 @@
                     </div>
                     <div id="d3" class="card-body collapse" data-parent="#accordion">
                         <div class="accordion-link-col">
-                            <p>Sure! Our pregnancy rate is 2x higher in users with PCOS. The pregnancy rate of people with PCOS is only 26.7% during 3 cycles—even when using regular OPK and OPK technology. According to this study, users with PCOS who used Mira for 3 cycles achieved a 52.7% pregnancy rate.</p>
+                            <p>**Based on a 2020 user survey, respondents who identified as having PCOS and used Mira for 3 cycles reported a 52.7% pregnancy rate. This is nearly double the typical 26.7% pregnancy rate over 3 cycles often cited for those with PCOS, even when using non-quantitative ovulation predictors.</p>
                         </div>
                     </div>
                 </div>
