--- a/sections/why-track-both-e3g-lh.liquid
+++ b/sections/why-track-both-e3g-lh.liquid
@@ -11,6 +11,9 @@
             <li>Battle infertility and hormone imbalance</li>
 <li>Quickly diagnose menstrual issues</li>
           </ul>
+              <p>
+                **The hormone tracking data is provided only for clinical purposes. This information does not replace professional medical evaluation and should not be interpreted as promotional claims. Proper clinical interpretation and application requires consultation with a licensed medical provider. Tracking is not intended for self-diagnosis or treatment.
+              </p>
             </div>
          </div>
          <div class="col-lg-6">
