--- a/sections/why-track-estrogen-LH.liquid
+++ b/sections/why-track-estrogen-LH.liquid
@@ -3,8 +3,11 @@
       <div class="heading-1">
          <h2>Why Track Estrogen and LH together?</h2>
          <p>Estrogen is an integral part of the fertility process. Tracking both hormones allows detecting the full fertile window and ovulation. These hormone levels are related to IVF, 
-            menopause, hormone imbalances such as PCOS, and other conditions. They are more than fertility tracking.
+            menopause, hormone imbalances such as PCOS, and other conditions.
          </p>
+        <p>
+          **Home-use hormone tests are intended to track ovulation and menstruation cycles. These tests should not be used for medical diagnosis or to adjust medication without supervision. Consult a licensed provider before making changes to your healthcare regimen.
+        </p>
       </div>
       <div id="resent-post-slider-four" class="arrow-slider-nav">
          <div class="item">
